--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.1'
     repositories {
         jcenter()
         mavenCentral()
+        google()
         maven{
             url "https://plugins.gradle.org/m2/"
         }
@@ -20,7 +20,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-
+        google()
     }
 }
 
