--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
-        google()
+//        google()
         maven{
             url "https://plugins.gradle.org/m2/"
         }
