--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,10 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
-//        google()
-        maven{
-            url "https://plugins.gradle.org/m2/"
-        }
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
