--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support:appcompat-v7:25.3.1'
     compile project(':quickcore')
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
     annotationProcessor project(':quickcore-compiler')
