--- a/quickcore-annotation/build.gradle
+++ b/quickcore-annotation/build.gradle
@@ -1,7 +1,9 @@
-apply plugin: 'java'
-
+apply plugin: 'java-library'
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.kobebryantwx'
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+
 }
 
 sourceCompatibility = "1.7"
