--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
     compile project(':quickcore')
     annotationProcessor project(':quickcore-compiler')
+    compile 'com.jokermonn:permissions4m-annotation:1.0.3'
 }
