--- a/quickcore-compiler/build.gradle
+++ b/quickcore-compiler/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'java'
-//apply plugin: 'com.github.dcendents.android-maven'
-//group='com.github.kobebryantwx'
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.kobebryantwx'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.squareup:javapoet:1.8.0'
-    compile project(':quickcore-annotation')
+    compile 'com.github.kobebryantwx:BaseCore:1.0.0-annotation'
 }
 sourceCompatibility=JavaVersion.VERSION_1_7
 targetCompatibility=JavaVersion.VERSION_1_7
