--- a/quickcore/build.gradle
+++ b/quickcore/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     compile 'com.google.dagger:dagger:2.11'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile project(':quickcore-annotation')
+    compile 'com.github.kobebryantwx:BaseCore:1.0.0-annotation'
     compile "io.reactivex.rxjava2:rxjava:2.1.1"
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
