--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,7 +27,6 @@ dependencies {
 
     implementation 'com.android.support:appcompat-v7:25.3.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
-    compile project(':quickcore')
+    implementation project(':quickcore')
     annotationProcessor project(':quickcore-compiler')
-    compile 'com.jokermonn:permissions4m-annotation:1.0.3'
 }
