--- a/quickcore/build.gradle
+++ b/quickcore/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
-group = 'com.github.kobebryantwx'
+//apply plugin: 'com.github.dcendents.android-maven'
+//group = 'com.github.kobebryantwx'
 android {
     compileSdkVersion 25
     buildToolsVersion "26.0.2"
@@ -29,14 +29,13 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
-    compile 'com.android.support:appcompat-v7:25.4.0'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    compile 'com.google.dagger:dagger:2.11'
+    implementation 'com.android.support:appcompat-v7:25.4.0'
+    api 'com.squareup.retrofit2:retrofit:2.3.0'
+    api 'com.squareup.retrofit2:converter-gson:2.3.0'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    api 'com.google.dagger:dagger:2.11'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.github.kobebryantwx:BaseCore:1.0.0-annotation'
-    compile "io.reactivex.rxjava2:rxjava:2.1.1"
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    api 'com.github.kobebryantwx:BaseCore:1.0.0-annotation'
+    api "io.reactivex.rxjava2:rxjava:2.1.1"
+    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
