--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -21,12 +21,15 @@ android {
         }
     }
 }
-
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
-    implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support:appcompat-v7:25.4.0'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+//    implementation 'com.github.kobebryantwx:BaseCore:1.0.1-lib'
+//    annotationProcessor 'com.github.kobebryantwx:BaseCore:1.0.0-compiler'
     implementation project(':quickcore')
-    annotationProcessor 'com.github.kobebryantwx:BaseCore:1.0.0-compiler'
+    annotationProcessor project(':quickcore-compiler')
+
 }
+
