--- a/quickcore-annotation/build.gradle
+++ b/quickcore-annotation/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
-apply plugin: 'com.github.dcendents.android-maven'
-group = 'com.github.kobebryantwx'
+//apply plugin: 'com.github.dcendents.android-maven'
+//group = 'com.github.kobebryantwx'
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
