--- a/quickcore/build.gradle
+++ b/quickcore/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     api 'com.google.dagger:dagger:2.11'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
-    compile 'com.github.kobebryantwx:BaseCore:1.0.0-annotation'
+    compile 'com.github.kobebryantwx.BaseCore:quickcore-annotation:1.0.1-annotation'
     api "io.reactivex.rxjava2:rxjava:2.1.1"
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
