--- a/quickcore-annotation/build.gradle
+++ b/quickcore-annotation/build.gradle
@@ -6,5 +6,5 @@ dependencies {
 
 }
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
