--- a/quickcore-compiler/build.gradle
+++ b/quickcore-compiler/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'java'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.squareup:javapoet:1.8.0'
-    compile 'com.github.kobebryantwx.BaseCore:quickcore-annotation:1.0.1-annotation'
+    compile 'com.github.kobebryantwx:BaseCore:1.0.0-annotation'
 }
 sourceCompatibility=JavaVersion.VERSION_1_7
 targetCompatibility=JavaVersion.VERSION_1_7
