--- a/quickcore-annotation/build.gradle
+++ b/quickcore-annotation/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+//apply plugin: 'bintray-release'
 //apply plugin: 'com.github.dcendents.android-maven'
 //group = 'com.github.kobebryantwx'
 dependencies {
@@ -8,3 +9,15 @@ dependencies {
 
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
+
+//添加
+//publish {
+//    artifactId = 'basecore-annotation'
+//    userOrg = rootProject.userOrg
+//    groupId = rootProject.groupId
+//    uploadName = rootProject.uploadName
+//    publishVersion = rootProject.publishVersion
+//    desc = rootProject.description
+//    website = rootProject.website
+//    licences = rootProject.licences
+//}
