--- a/quickcore-compiler/build.gradle
+++ b/quickcore-compiler/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 //apply plugin: 'bintray-release'
-//apply plugin: 'com.github.dcendents.android-maven'
-//group='com.github.kobebryantwx'
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.kobebryantwx'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
