--- a/quickcore/build.gradle
+++ b/quickcore/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 //apply plugin: 'bintray-release'
-apply plugin: 'com.github.dcendents.android-maven'
-group = 'com.github.kobebryantwx'
+//apply plugin: 'com.github.dcendents.android-maven'
+//group = 'com.github.kobebryantwx'
 android {
     compileSdkVersion 25
     buildToolsVersion "26.0.2"
