--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 31 15:57:10 CST 2018
-ndk.dir=D\:\\software\\SDK\\ndk-bundle
-sdk.dir=D\:\\software\\SDK
+#Wed Feb 28 18:44:28 CST 2018
+sdk.dir=D\:\\Android\\Sdk
