--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="me.militch.quickcore.sample">
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name="com.kbryant.quickcore.sample.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name="com.kbryant.quickcore.sample.MyApplication"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.kbryant.quickcore.sample.host.MainActivity">
